test/types/unions/accessByIndex-bad3.good
accessByIndex-bad3.chpl:7: error: union access by non-integer index is not supported
