test/types/unions/accessByIndex-bad3.chpl
union U {
  var x: int;
  var y: string;
}

var u: U;
u("x") = 10;
